<resources>
    <string name="app_name">Just learn IT</string>

    <!--Settings categories-->
    <string name="setting_title">Settings</string>
    <string name="backup">Backup</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="current_account">Current backup account</string>

    <string name="backup_data">Backup local data</string>
    <string name="local_date">Last changes: </string>
    <string name="proceed">Proceed?</string>
    <string name="backup_progress">Backup in progress</string>
    <string name="backup_success">Dictionaries data backed up successfully!</string>
    <string name="backup_error">Dictionaries data restoring error!</string>

    <string name="restore_data">Restore local data</string>
    <string name="sync_date">Latest upload: </string>
    <string name="backup_found">Restore data from cloud</string>
    <string name="backup_restore">Found data backup</string>
    <string name="backup_not_found">Backup not found</string>
    <string name="restore">Restore?</string>
    <string name="restore_progress">Restore in progress</string>
    <string name="restore_success">Dictionaries data restored successfully!</string>
    <string name="restore_error">Dictionaries data restoring error!</string>

    <string name="equal_files">, files are equal</string>
    <string name="local_file">, local file is</string>
    <string name="cloud_file">, cloud file is</string>
    <string name="larger">larger</string>
    <string name="no_backup_info"> no uploud info</string>
    <string name="size">Size</string>

    <string name="dictionaries_title">Dictionaries</string>
    <string name="created">Created </string>
    <string name="topics">Stores topics: </string>
    <string name="new_dict_title">Dictionary name</string>
    <string name="no_dictionaries">No dictionaries yet... Try adding first one</string>
    <string name="from_language">From language</string>
    <string name="to_language">To language</string>

    <string name="topics_title">Topics</string>
    <string name="topic_hint">Topic name</string>
    <string name="new_topic_title">Topic</string>
    <string name="select_image">Select image</string>
    <string name="cancel">CANCEL </string>
    <string name="ok">OK</string>
    <string name="save">SAVE</string>
    <string name="no_topics">No topics yet... Try adding first one</string>

    <string name="words_title">Words</string>
    <string name="word_hint">Word</string>
    <string name="new_word">New word</string>
    <string name="translation_hint">Translation</string>
    <string name="device_offline">Translation unsupported. Please, check internet your connection</string>
    <string name="offline">Please, check internet your connection</string>
    <string name="testing">Testing</string>
    <string name="settings">Settings</string>
    <string name="more_words">Try adding more words</string>
    <string name="no_words">No words yet... Try adding first one</string>

    <string name="testing_level">Select testing level</string>
    <string name="level_begin">Self examine</string>
    <string name="level_normal">Testing</string>
    <string name="testing_advanced">Writing</string>
    <string name="no">NO THANKS</string>

    <string name="account_permission">This app needs to access your Google account (via Contacts)</string>
    <string name="storage_permission">This app needs access to files</string>
    <string name="no_play_services">"This app requires Google Play Services. Please install Google
        Play Services on your device and relaunch this app."</string>
    <string name="no_inet">Please check your internet connection</string>

    <string name="section_format">Page %1$d</string>
    <string name="intro_feature_label_1">YOUR VOCABULARY ALWAYS IN POCKET </string>
    <string name="intro_feature_label_2">AVAILABLE ACROSS DEVICES</string>
    <string name="intro_feature_label_3">LOGIN</string>
    <string name="intro_feature_description_1">Learn foreign words anywhere and anytime</string>
    <string name="intro_feature_description_2">Backup your words with Google account</string>
    <string name="intro_feature_description_3">login</string>

    <string name="action_settings">Settings</string>
    <string name="change_dictionary_action">Change dictionary</string>
</resources>
