<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/wordTextBox"
        android:hint="@string/word_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:focusable="true"/>




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <AutoCompleteTextView
            android:id="@+id/translationTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translation_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:focusable="true"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:id="@+id/newWordCancel"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/ok"
        android:textSize="20dp"
        android:id="@+id/newWordOK"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"/>
        </LinearLayout>

</LinearLayout>