<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/testingLevelBeginer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        card_view:cardElevation="0dp"
        android:layout_marginLeft="@dimen/dialog_margin"
        android:layout_marginRight="@dimen/dialog_margin"
        card_view:cardBackgroundColor="@color/background">

        <ImageView
            android:layout_width="@dimen/test_dialog_icon_size"
            android:layout_height="@dimen/test_dialog_icon_size"
            android:layout_marginTop="@dimen/dialog_margin"
            android:layout_marginBottom="@dimen/dialog_margin"
            android:src="@drawable/ic_star"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/level_begin"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dialog_text_margin"
            android:textColor="@color/separator" />
        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/testingLevelNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        card_view:cardElevation="0dp"
        android:layout_marginLeft="@dimen/dialog_margin"
        android:layout_marginRight="@dimen/dialog_margin"
        card_view:cardBackgroundColor="@color/background">

        <ImageView
            android:layout_width="@dimen/test_dialog_icon_size"
            android:layout_height="@dimen/test_dialog_icon_size"
            android:layout_marginTop="@dimen/dialog_margin"
            android:layout_marginBottom="@dimen/dialog_margin"
            android:src="@drawable/ic_testing"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/level_normal"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dialog_text_margin"
            android:textColor="@color/separator" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/testingLevelAdvanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        card_view:cardElevation="0dp"
        android:layout_marginLeft="@dimen/dialog_margin"
        android:layout_marginRight="@dimen/dialog_margin"
        card_view:cardBackgroundColor="@color/background">

        <ImageView
            android:layout_width="@dimen/test_dialog_icon_size"
            android:layout_height="@dimen/test_dialog_icon_size"
            android:layout_marginTop="@dimen/dialog_margin"
            android:layout_marginBottom="@dimen/dialog_margin"
            android:src="@drawable/ic_writing"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/testing_advanced"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dialog_text_margin"
            android:textColor="@color/separator" />

    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/no"
        android:id="@+id/closeTestDialog"
        android:layout_marginRight="@dimen/activity_margin_half"
        android:layout_marginBottom="@dimen/activity_margin_half"
        android:layout_gravity="right"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>